cleaning logs, creating new exec. file, readme

--- a/readme
+++ b/readme
@@ -1,3 +1,9 @@
+#Gnarus Warm Up
+
+Este projeto tem como objetivo automatizar a parte de "esquentar a máquina"
+durante o deploy, fazendo com que não se tenha que fazer toda aquela parte
+chata de ficar clicando em cada endpoint para ir carregando as JSP's.
+
 #Py library
 Selenium
 pip install selenium
@@ -12,4 +18,3 @@ sudo apt-get install python3-tk
 
 #create exec
 pyinstaller --onefile -w main.py
-
